--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "node build.js",
     "clean": "rimraf public",
     "start": "node serve.js",
-    "gh-pages": "gh-pages -d public"
+    "gh-pages": "npm run build && gh-pages -d public"
   },
   "keywords": [
     "presentation",
