--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "node build.js",
     "clean": "rimraf public",
     "start": "node serve.js",
+    "prettier": "prettier --write \"src/**/*.{html,scss,js}\"",
     "gh-pages": "npm run build && gh-pages -d public"
   },
   "keywords": [
@@ -28,6 +29,7 @@
     "browser-sync": "^3.0.2",
     "gh-pages": "^6.1.1",
     "glob": "^10.3.10",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "sass": "1.70"
   }
