--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rimraf public",
     "start": "node serve.js",
     "prettier": "prettier --write \"src/**/*.{html,scss,js}\"",
-    "gh-pages": "npm run build && gh-pages -d public"
+    "gh-pages": "npm run build && gh-pages -d public",
+    "gh-pages.wip": "gh-pages -d wip"
   },
   "keywords": [
     "presentation",
