--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["main", "part-one", "part-two", "part-three"]
+  "conventionalCommits.scopes": ["main", "part-one", "part-two", "part-three", "cover"]
 }
